iptables.rules
# Generated by iptables-save v1.8.7 on Sat Apr  8 06:03:21 2023
*filter
:INPUT ACCEPT [2:120]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [762:102875]
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A OUTPUT -m owner --uid-owner 125 -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A OUTPUT -m owner --uid-owner 125 -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A OUTPUT -m owner --uid-owner 125 -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A OUTPUT -m owner --uid-owner 125 -j ACCEPT
COMMIT
# Completed on Sat Apr  8 06:03:21 2023
# Generated by iptables-save v1.8.7 on Sat Apr  8 06:03:21 2023
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -p tcp -j REDIRECT --to-ports 9040
-A PREROUTING -p udp -j REDIRECT --to-ports 9040
-A OUTPUT -p udp -m udp --dport 53 -j REDIRECT --to-ports 9053
-A OUTPUT -d 10.192.0.0/10 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A OUTPUT -m owner --uid-owner 125 -j RETURN
-A OUTPUT -o lo -j RETURN
-A OUTPUT -d 255.255.255.255/32 -j RETURN
-A OUTPUT -d 240.0.0.0/4 -j RETURN
-A OUTPUT -d 233.252.0.0/24 -j RETURN
-A OUTPUT -d 224.0.0.0/4 -j RETURN
-A OUTPUT -d 203.0.113.0/24 -j RETURN
-A OUTPUT -d 198.51.100.0/24 -j RETURN
-A OUTPUT -d 198.18.0.0/15 -j RETURN
-A OUTPUT -d 192.168.0.0/16 -j RETURN
-A OUTPUT -d 192.88.99.0/24 -j RETURN
-A OUTPUT -d 192.0.2.0/24 -j RETURN
-A OUTPUT -d 192.0.0.0/24 -j RETURN
-A OUTPUT -d 172.16.0.0/12 -j RETURN
-A OUTPUT -d 169.254.0.0/16 -j RETURN
-A OUTPUT -d 127.0.0.0/8 -j RETURN
-A OUTPUT -d 100.64.0.0/10 -j RETURN
-A OUTPUT -d 10.0.0.0/8 -j RETURN
-A OUTPUT -d 0.0.0.0/8 -j RETURN
-A OUTPUT -p udp -j REDIRECT --to-ports 9040
-A OUTPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j REDIRECT --to-ports 9040
-A OUTPUT -p tcp -j REDIRECT --to-ports 9040
COMMIT
# Completed on Sat Apr  8 06:03:21 2023
